--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "bitwrap",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^6.2.0",
     "@astrojs/prefetch": "^0.2.0",
+    "@astrojs/sitemap": "^1.2.1",
     "@astrojs/tailwind": "^3.1.0",
     "astro": "^2.1.2",
+    "astro-icon": "^0.8.0",
     "install": "^0.13.0",
     "tailwindcss": "^3.2.7"
   },
